Referencing: initial port of WKT 1 parser for Coordinate Reference System objects.
git-svn-id: https://svn.apache.org/repos/asf/sis/branches/JDK8@1680409 13f79535-47bb-0310-9956-ffa450edef68